--- a/assignment2/css/responsive.css
+++ b/assignment2/css/responsive.css
@@ -7,58 +7,55 @@
   box-sizing: border-box;
 }
 h1 {
-  margin-bottom: 40px;
+  font-family: Arial;
+	font-size: 175%;
+  margin-bottom:15px;
+  
 }
 
-.p1 {
-  border: 2px solid black;
+.outerbox {
+  border: 1px solid black;
   background-color: gray;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
+  position: relative;
+  font-family: Arial;
   color: black; 
+  display: inline-block;
+  width: 95%;
+  margin: 10px;
+  
+  
 }
 
-.tile2 {
+.text {
     float: left;
     clear: both;
-    padding: 10px;
+    padding: 5px;
 }
 
-
-.tile11 {
-    border-left: 2px solid black;
-    border-bottom: 2px solid black;
-    padding: 0.5em;
-    background-color: coral;
-    float: right;
-    width: 30%;
-    height: 50px;
+.innerbox {
+  
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  padding: 0.5em;
+  text-align:center;
+  font-size: 110%;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  float: right;
+  width: 30%;
+  height: 30px;
 }   
-.tile12 {
-  border-left: 2px solid black;
-  border-bottom: 2px solid black;
-  padding: 0.5em;
-  /* display: block; */
+
+.smallbox1 {
+    background-color: lightpink;
+   }   
+.smallbox2{
+  background-color: coral;
+  color: azure;
+  }  
+.smallbox3 {
   background-color: lightgoldenrodyellow;
-  float: right;
-  width: 30%;
-  height: 50px;
-
-}  
-.tile13 {
-  border-left: 2px solid black;
-  border-bottom: 2px solid black;
-  padding: 0.5em;
-  /* display: block; */
-  background-color: lightpink;
-  float: right;
-  width: 30%;
-  height: 50px;
-
-}             
+  }             
 
 /* Simple Responsive Framework. */
 .row {
