--- a/assignment3/css/styles.css
+++ b/assignment3/css/styles.css
@@ -16,17 +16,21 @@ body {
     margin-bottom:15px;
     
   }
+  .linecolor{
+    background-color: black;
+  }
   
   .outerbox {
     border: 1px solid black;
-    background-color: gray;
+    background-color:rgba(145, 142, 142, 0.541);
     position: center;
     font-family: Arial;
     color: black; 
-    display: inline-block;
-    margin-left: 30px;
-    margin-right: 30px;
-    height: 500px;
+     display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+    
   }
   .innerheading {
   
@@ -51,7 +55,8 @@ body {
   }
   
   #header-nav {
-    background-color:grey;
+    background-color:rgba(145, 142, 142, 0.541);
+    
     border-radius: 0;
     border: 30;
     padding: 0.5em;
@@ -59,7 +64,7 @@ body {
     border-top:2px solid black;
     border-left:2px solid black;
     border-right:2px solid black;
-    transition: top 0.3s ease;
+  
   }
   .navbar-hide{
     top: -10px;
